--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,22 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+
+
+# Dependências
+vendor/
+
+# Arquivos de cache
+tmp/cache/
+cache/
+
+# Logs
+logs/
+
+# Arquivos de ambiente
+.env
+
+# Outros arquivos temporários ou específicos
+.DS_Store
+Thumbs.db
