feat: Adicionando o Woops como error handler
Adiciona a lib "Woops" para o handling de erros do PHP.  Ele fornece uma interface de erro bonita que ajuda na depuraração.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 APP_NAME="Rede Plástica"
 APP_ENV=development
 APP_BASE_URL=http://localhost:8080
+APP_DISPLAY_ERRORS=true
 
 # DATABASE
 DB_HOST=db
@@ -10,7 +11,6 @@ DB_USER=root
 DB_PASSWORD=root
 
 # SLIM FRAMEWORK
-SLIM_DISPLAY_ERROR_DETAILS=true
 SLIM_LOG_ERRORS=false
 SLIM_LOG_ERROR_DETAILS=false
 
