--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "doctrine/orm": "^3.5",
         "symfony/cache": "^7.3",
         "symfony/validator": "^7.3",
-        "symfony/translation": "^7.3"
+        "symfony/translation": "^7.3",
+        "zeuxisoo/slim-whoops": "^0.7.3"
     },
     "scripts": {
         "doctrine": "@php src/Infrastructure/Cli/Doctrine/cli-config.php"
